--- a/project_with_rtos.ioc
+++ b/project_with_rtos.ioc
@@ -34,7 +34,7 @@ Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTIMER_TASK_PRIORITY,configUSE_TIMERS,FootprintOK
-FREERTOS.Tasks01=freq_measure,41,128,start_freq_meas,Default,NULL,Dynamic,NULL,NULL;motor_control,50,128,start_motor_control,Default,NULL,Dynamic,NULL,NULL;lcd_text,55,128,start_lcd_work,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=freq_measure,41,128,start_freq_meas,Default,NULL,Dynamic,NULL,NULL;motor_control,50,128,start_motor_control,Default,NULL,Dynamic,NULL,NULL;lcd_text,55,128,start_lcd_work,Default,NULL,Dynamic,NULL,NULL;diode_control,8,128,start_diode_contr,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTIMER_TASK_PRIORITY=6
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FREERTOS.configUSE_TIMERS=1
@@ -66,29 +66,36 @@ Mcu.Pin12=PA4
 Mcu.Pin13=PA5
 Mcu.Pin14=PA6
 Mcu.Pin15=PA7
-Mcu.Pin16=PB0
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA13
+Mcu.Pin16=PC5
+Mcu.Pin17=PB0
+Mcu.Pin18=PB11
+Mcu.Pin19=PB12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PB3
-Mcu.Pin22=PB4
-Mcu.Pin23=PB7
-Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin25=VP_SYS_VS_tim6
-Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin20=PC6
+Mcu.Pin21=PC8
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
 Mcu.Pin3=PF0-OSC_IN
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin32=VP_SYS_VS_tim6
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA0
 Mcu.Pin9=PA1
-Mcu.PinsNb=30
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -123,6 +130,14 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=A1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=RED_DIODE
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=BUTTON_4
+PA12.Locked=true
+PA12.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -177,6 +192,14 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=A3
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=GREEN_DIODE
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=BLUE_DIODE
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -210,6 +233,18 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.Signal=ADCx_IN8
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=BUTTON_3
+PC5.Locked=true
+PC5.Signal=GPIO_Input
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=BUTTON_2
+PC6.Locked=true
+PC6.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=BUTTON_1
+PC8.Locked=true
+PC8.Signal=GPIO_Input
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
